fix overflow events

--- a/events.css
+++ b/events.css
@@ -3,11 +3,20 @@
     margin: 0;
     padding: 0;
     text-decoration: none;
+    overflow-x: hidden;
 }
 #head{
     background-color: #0d4732;
-    height: 150px;
+    height: 160px;
     width: 100%;
+}
+#child-head nav{
+    float: left;
+}
+#child-head::after{
+    content: '';
+    display: block;
+    clear: both;
 }
 #head nav a{
     color: white;
@@ -34,7 +43,7 @@
     width: 50px;
 }
 #contactonline-child a i{
-    font-size: 35px;
+    font-size: 30px;
 }
 #contactonline-child::after{
     content: '';
@@ -114,8 +123,9 @@ body{
     background-image: url("img/logo.jpg");
     width: 100%;
     height: 200px;
-    position: relative;
-    top: -40px;
+    position: absolute;
+    top: 160px;
+    left: 0;
     z-index: -1;
     background-position: center;
 }
@@ -131,8 +141,8 @@ body{
     position: absolute;
     width: 300px;
     height: 100px;
-    top: 320px;
-    left: 1000px;
+    top: 330px;
+    left: 80%;
 }
 nav a{
     color: white;
@@ -148,30 +158,32 @@ nav a{
 }
 /*------------------------------end of head--------------------------------*/
 #wrapper{
-    width: 77%;
-    margin: 10px auto;
+    width: 80%;
+    margin-top: 200px;
+    margin-left: 200px;
 }
 #child1-wrapper{
     width: 100%;
 }
 .child-wrapper img{
     width: 100%;
-    float: left;
+    /* float: left; */
 }
 .child-wrapper{
     margin: 0;
     float: left;
     margin: 5px;
+    width: 26.66666666666667%;
 } 
 .child-wrapper:hover{
     cursor: pointer;
 }
 .child-wrapper div{
     margin-bottom: 10px;
+    background-color: white;
 }
 .child-wrapper div div:last-child{
     text-align: center;
-    background-color: white;
     font-style: bold;
     font-size: 15px;
 }
@@ -185,8 +197,9 @@ nav a{
     width: 120px;
     border: 2px solid burlywood;
     margin: 0 auto;
-    height: 40px;
-    line-height: 40px;
+    margin-top: 20px;
+    height: 50px;
+    line-height: 45px;
     text-align: center;
     color: burlywood;
     font-style: bold;
